@@ -14,6 +14,7 @@
 - updated: `$options()` by adding `disabled` key
 - updated: `String.ROOT()` by adding a support for jComponent `AJAX()` calls
 - updated: `RESTBuilder.method(method, [data])` added `data` argument
+- updated: `String.parseDate([format])` added `format` argument
 
 - fixed: system routing
 - fixed: NoSQL sorting, solved a strange problem
